-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1
-
None
-
Qt 5.0.1 on Mac OS 10.8.2.
-
c7a31d48e1e43409c50ac62305c06daf90c855a5
I tried to ask about this around but I have not received any answers. I apologize for false alarm if I'm doing anything wrong as I'm new to Qt. That said...
Please see the attached files. The problem is, when I try to remove some characters from QPlainTextEdit it corrupts the document. Specifically, I'm looping thought the text blocks and for each for them I remove first two characters from the line with removeSelectedText(), all operations are enclosed in one pair of beginEditBlock()/endEditBlock(). When the pair is disabled, the document stays in tact.
| For Gerrit Dashboard: QTBUG-30051 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 83583,5 | Fix broken QPlainTextDocumentLayout after removing chars | stable | qt/qtbase | Status: MERGED | +2 | 0 |